--- a/graphics/mayavi/Makefile
+++ b/graphics/mayavi/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.9 2006/02/18 17:16:01 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2006/03/04 21:29:50 jlam Exp $
 #
 
 DISTNAME=		MayaVi-1.5
-PKGREVISION=		2
+PKGREVISION=		3
 CATEGORIES=		graphics
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=mayavi/}
 
