--- a/security/Makefile
+++ b/security/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.288 2007/02/28 05:35:16 schmonz Exp $
+# $NetBSD: Makefile,v 1.289 2007/03/09 13:28:14 abs Exp $
 #
 
 COMMENT=	Security tools
@@ -144,8 +144,10 @@ SUBDIR+=	p5-Crypt-CBC
 SUBDIR+=	p5-Crypt-CipherSaber
 SUBDIR+=	p5-Crypt-DES
 SUBDIR+=	p5-Crypt-DES_EDE3
+SUBDIR+=	p5-Crypt-CBC
 SUBDIR+=	p5-Crypt-DH
 SUBDIR+=	p5-Crypt-DSA
+SUBDIR+=	p5-Crypt-GeneratePassword
 SUBDIR+=	p5-Crypt-IDEA
 SUBDIR+=	p5-Crypt-OpenPGP
 SUBDIR+=	p5-Crypt-OpenSSL-Bignum
