--- a/filesystems/fuse-cryptofs/Makefile
+++ b/filesystems/fuse-cryptofs/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2007/02/20 22:58:34 xtraeme Exp $
 #
 
 DISTNAME=	cryptofs-0.6.0
 PKGNAME=	fuse-${DISTNAME}
-CATEGORIES=	sysutils
+CATEGORIES=	filesystems
 MASTER_SITES=	http://reboot.animeirc.de/cryptofs/
 EXTRACT_SUFX=	.tar.bz2
 
