--- a/filesystems/fuse-curlftpfs/Makefile
+++ b/filesystems/fuse-curlftpfs/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2007/02/20 23:02:03 xtraeme Exp $
 #
 
 DISTNAME=	curlftpfs-0.9
 PKGNAME=	fuse-${DISTNAME}
-CATEGORIES=	sysutils
+CATEGORIES=	filesystems
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=curlftpfs/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
