--- a/filesystems/fuse-lzofs/Makefile
+++ b/filesystems/fuse-lzofs/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2007/02/20 23:00:08 xtraeme Exp $
 #
 
 DISTNAME=	LZOlayer_fs-20060306
 PKGNAME=	fuse-${DISTNAME:S/LZOlayer_fs/lzofs/}
-CATEGORIES=	sysutils
+CATEGORIES=	filesystems
 MASTER_SITES=	http://north.one.pl/~kazik/pub/LZOlayer/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
