--- a/filesystems/fuse/Makefile
+++ b/filesystems/fuse/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2007/02/20 23:48:30 xtraeme Exp $
 #
 
 DISTNAME=		fuse-2.5.2
-CATEGORIES=		sysutils
+CATEGORIES=		filesystems
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=fuse/}
 
 MAINTAINER=		pancake@phreaker.net
