--- a/net/uucp/files/rmail/Makefile
+++ b/net/uucp/files/rmail/Makefile
@@ -1,7 +1,9 @@
-#	$NetBSD: Makefile,v 1.7 1995/03/21 07:08:15 cgd Exp $
+#	$NetBSD: Makefile,v 1.1 2007/03/15 20:02:20 christos Exp $
 #	@(#)Makefile	8.1 (Berkeley) 5/31/93
 
 PROG=	rmail
 MAN=	rmail.8
+BINDIR=	@PREFIX@/bin
+MANDIR= @PREFIX@/man
 
 .include <bsd.prog.mk>
