--- a/net/uucp/files/uucpd/Makefile
+++ b/net/uucp/files/uucpd/Makefile
@@ -1,8 +1,10 @@
-#	$NetBSD: Makefile,v 1.9 2002/08/20 14:01:49 christos Exp $
+#	$NetBSD: Makefile,v 1.1 2007/03/15 20:02:20 christos Exp $
 #	from: @(#)Makefile	8.1 (Berkeley) 6/4/93
 
 PROG=	uucpd
 MAN=	uucpd.8
+BINDIR=	@PREFIX@/libexec
+MANDIR=	@PREFIX@/man
 LDADD+= -lcrypt -lutil
 DPADD+=	${LIBCRYPT} ${LIBUTIL}
 CPPFLAGS+=-DSUPPORT_UTMP -DSUPPORT_UTMPX
