--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.819 2007/03/14 16:22:03 obache Exp $
+# $NetBSD: Makefile,v 1.820 2007/03/15 22:39:55 wennmach Exp $
 #
 
 COMMENT=	Development utilities
@@ -298,6 +298,7 @@ SUBDIR+=	libstash
 SUBDIR+=	libstatgrab
 SUBDIR+=	libstree
 SUBDIR+=	libstroke
+SUBDIR+=	libtai
 SUBDIR+=	libtar
 SUBDIR+=	libtecla
 SUBDIR+=	libtool
