--- a/wm/olvwm/Makefile
+++ b/wm/olvwm/Makefile
@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.13 2006/12/15 20:33:02 joerg Exp $
+# $NetBSD: Makefile,v 1.14 2007/01/08 17:11:31 joerg Exp $
 #
 
 DISTNAME=	olvwm4.src4
 PKGNAME=	olvwm-4.4
 PKGREVISION=	2
 CATEGORIES=	x11 wm
-MASTER_SITES=	http://www.akula.com/~jadler/sdo/olvwm/
+MASTER_SITES=	http://home.nyc.rr.com/twopks/olvwm/
 
 MAINTAINER=	w.wnuk@zodiac.mimuw.edu.pl
-HOMEPAGE=	http://www.akula.com/~jadler/sdo/olvwm/index.html
+HOMEPAGE=	http://home.nyc.rr.com/twopks/olvwm/ 
 COMMENT=	Open Look Virtual Window Manager
 
 DEPENDS+=	xview-clients>=3.2.1:../../x11/xview-clients
