--- a/print/mpage/Makefile
+++ b/print/mpage/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.16 2006/01/06 02:57:39 reed Exp $
+# $NetBSD: Makefile,v 1.17 2006/03/04 21:30:31 jlam Exp $
 #
 
-DISTNAME=	mpage-2.5
+DISTNAME=	mpage-2.5.5
 CATEGORIES=	print
-MASTER_SITES=	ftp://ftp.mesa.nl/pub/mpage/
+MASTER_SITES=	ftp://ftp.mesa.nl/pub/mpage/	\
+		http://www.mesa.nl/pub/mpage/
 EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -11,6 +12,7 @@ COMMENT=	Print multiple pages per sheet of paper
 HOMEPAGE=	http://www.mesa.nl/download.html
 
 BUILD_TARGET=	default
+MAKE_ENV+=	MANDIR=${PREFIX}/${PKGMANDIR}/man1
 
 .include "../../mk/bsd.prefs.mk"
 
