--- a/x11/xterm/Makefile
+++ b/x11/xterm/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.32 2006/11/06 10:10:58 joerg Exp $
+# $NetBSD: Makefile,v 1.33 2007/03/13 11:14:26 drochner Exp $
 
 DISTNAME=	xterm-224
 CATEGORIES=	x11
-MASTER_SITES=	ftp://invisible-island.net/xterm/
+MASTER_SITES=	ftp://invisible-island.net/pub/xterm/
 EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
