--- a/x11/xdpyinfo/Makefile
+++ b/x11/xdpyinfo/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/02/25 05:11:11 dsainty Exp $
+# $NetBSD: Makefile,v 1.2 2007/02/27 15:05:41 dsainty Exp $
 #
 
 DISTNAME=	xdpyinfo-1.0.1
@@ -9,6 +9,8 @@ EXTRACT_SUFX=	.tar.bz2
 MAINTAINER=	joerg@NetBSD.org
 HOMEPAGE=	http://xorg.freedesktop.org/
 COMMENT=	Display information utility for X
+
+PKG_DESTDIR_SUPPORT=	user-destdir
 
 GNU_CONFIGURE=	yes
 USE_TOOLS+=	pkg-config
