--- a/audio/py-ao/Makefile
+++ b/audio/py-ao/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2006/02/05 23:08:13 joerg Exp $
+# $NetBSD: Makefile,v 1.8 2006/03/04 21:28:57 jlam Exp $
 #
 
 DISTNAME=		pyao-0.81
@@ -15,7 +15,8 @@ PY_PATCHPLIST=		yes
 PYDISTUTILSPKG=		yes
 
 HAS_CONFIGURE=		yes
-CONFIGURE_SCRIPT=	${PYTHONBIN} config_unix.py
+CONFIG_SHELL=		${PYTHONBIN}
+CONFIGURE_SCRIPT=	config_unix.py
 CONFIGURE_ARGS+=	--prefix ${PREFIX}
 
 .include "../../audio/libao/buildlink3.mk"
