--- a/graphics/ImageMagick/Makefile.common
+++ b/graphics/ImageMagick/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.71 2007/02/22 13:34:01 adam Exp $
+# $NetBSD: Makefile.common,v 1.72 2007/03/02 02:08:03 dmcmahill Exp $
 
 ###########################################################################
 #
@@ -10,7 +10,7 @@
 ###########################################################################
 
 IM_MAJOR_VER=		6.3.2
-IM_MINOR_VER=		8
+IM_MINOR_VER=		9
 IM_MAJOR_LIB_VER=	${IM_MAJOR_VER}
 
 .if (${IM_MINOR_VER} != NONE)
@@ -21,7 +21,6 @@ DISTSUFFIX=	${IM_MAJOR_VER}
 
 DISTNAME=	ImageMagick-${DISTSUFFIX}
 DISTVERSION=	${DISTSUFFIX:S/-/./}
-DIST_SUBDIR=	ImageMagick-${DISTVERSION}
 
 CATEGORIES=	graphics
 MASTER_SITES=	ftp://ftp.imagemagick.net/pub/ImageMagick/ \
