--- a/mail/turba/Makefile
+++ b/mail/turba/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2006/06/25 19:53:13 dmcmahill Exp $
+# $NetBSD: Makefile,v 1.19 2006/08/05 12:52:25 adrianp Exp $
 
 DISTNAME=	turba-h3-${TURBAVER}
 PKGNAME=	turba-${TURBAVER}
@@ -18,7 +18,7 @@ DOCDIR=		${PREFIX}/share/doc/turba
 EGDIR=		${PREFIX}/share/examples/turba
 HORDEDIR=	${PREFIX}/share/horde
 TURBADIR=	${HORDEDIR}/turba
-TURBAVER=	2.1.2
+TURBAVER=	2.1.4
 PAXDIRS=	lib locale po scripts templates themes
 USE_TOOLS+=	perl:run
 
