--- a/games/freeciv-share/Makefile.common
+++ b/games/freeciv-share/Makefile.common
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile.common,v 1.27 2006/06/08 16:06:50 minskim Exp $
+# $NetBSD: Makefile.common,v 1.28 2006/06/11 13:51:25 joerg Exp $
 
 DISTNAME=	freeciv-${FC_VERS}
-FC_VERS=	2.0.8
+FC_VERS=	2.0.9
 CATEGORIES=	games
 MASTER_SITES=	ftp://ftp.freeciv.org/pub/freeciv/stable/ \
 		http://www.freeciv.org/ftp/stable/ \
