--- a/lang/cdl3/Makefile
+++ b/lang/cdl3/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2006/02/05 23:09:43 joerg Exp $
+# $NetBSD: Makefile,v 1.8 2006/10/14 08:04:25 wiz Exp $
 
-DISTNAME=	cdl3-1.2.5
-PKGREVISION=	1
+DISTNAME=	cdl3-1.2.7
 CATEGORIES=	lang
 MASTER_SITES=	ftp://ftp.cs.ru.nl/pub/cdl3/
 
