--- a/security/ocaml-ssl/Makefile
+++ b/security/ocaml-ssl/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2007/01/15 14:21:10 tonio Exp $
 #
 
-DISTNAME=	ocaml-ssl-0.4.0
+DISTNAME=	ocaml-ssl-0.4.1
 CATEGORIES=	security
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=savonet/}
 
