--- a/emulators/Makefile
+++ b/emulators/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.154 2006/10/12 12:04:39 markd Exp $
+# $NetBSD: Makefile,v 1.155 2007/02/23 21:40:19 agc Exp $
 #
 
 COMMENT=	Emulators for other operating systems
@@ -13,6 +13,7 @@ SUBDIR+=	ROMBuild
 SUBDIR+=	ROMInfo
 SUBDIR+=	ZIPIdent
 SUBDIR+=	aliados
+SUBDIR+=	applyppf
 SUBDIR+=	aranym
 SUBDIR+=	arcem
 SUBDIR+=	arnold
