--- a/print/a2ps/Makefile
+++ b/print/a2ps/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.64 2006/05/06 03:41:22 reed Exp $
+# $NetBSD: Makefile,v 1.65 2006/06/07 21:11:55 minskim Exp $
 
 DISTNAME=		a2ps-4.13b
 PKGNAME=		a2ps-4.13.0.2
@@ -29,6 +29,7 @@ GNU_CONFIGURE=		YES
 CONFIGURE_ENV+=		LPR=lpr
 CONFIGURE_ARGS+=	--with-medium=${PAPERSIZE:Q}
 CONFIGURE_ARGS+=	--sysconfdir=${PKG_SYSCONFDIR:Q}
+CONFIGURE_ARGS+=	--disable-dependency-tracking
 
 EGDIR=			${PREFIX}/share/examples/a2ps
 CONF_FILES=		${EGDIR}/a2ps-site.cfg ${PKG_SYSCONFDIR}/a2ps-site.cfg
