--- a/net/gopher/Makefile
+++ b/net/gopher/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2006/02/05 23:10:25 joerg Exp $
+# $NetBSD: Makefile,v 1.16 2006/03/04 21:30:19 jlam Exp $
 #
 
 DISTNAME=		gopher_3.0.11
@@ -9,7 +9,7 @@ MASTER_SITES=		http://quux.org/devel/gopher/Downloads/
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		gopher://quux.org/1/devel/gopher/
-COMMENT=		Distributed document delivery client and server
+COMMENT=		Distributed document delivery client
 
 WRKSRC=			${WRKDIR}/gopher
 PKG_SYSCONFSUBDIR?=	${PKGBASE}
